final nodefix prototype